EX-125-Aeron-Snapshot-Test: Migrate wallet Service to Aeron Cluster